--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
 
                   <div class="row">
                       <div class="col-12">
-                          <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                          <input type="submit" value="Send Message" class="primaryAction btn btn-primary py-3 px-5" style="background-color: #ff4500;" >
                       </div>
                   </div>
               
