--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
       <div class="container-fluid" style="background-color: chocolate; height:auto">
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex">
-            <a href="index.html" class="site-logo ">
+            <a href="{% url 'home' %}" class="site-logo ">
               <img src="{% static 'images/otv1.jpg'%}" class="logostyle" style="border-radius: 70%; height:110px; border-color:#FF4500;border-style:solid;">
               <center><h5 style="color: honeydew;float:right; " class=" mt-4 mx-5">Odisha Television Limited (ଓଡ଼ିଶା ଟିଭି)</h5></center>
             </a>
