--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
               <div class="copyright">
                   <p>
                       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Odisha Television Ltd <img src="{% static 'images/otv1.jpg'%}" class="logostyle" style=" height:40px; "> by <a href="https://colorlib.com" target="_blank" >OTV</a>
+                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Odisha Television Ltd <img src="{% static 'images/otv1.jpg'%}" class="logostyle" style=" height:40px; "> by <a href="{% url 'home' %}" target="_blank" >OTV</a>
                       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                       </p>
               </div>
